--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,25 @@
 <h1>Welcome</h1>
 <p>This is a basic chat app</p>
+
+<ul>
+  <% @rooms.each do |room| %>
+    <%= room.name %>
+  <% end %>
+</ul>
+
+<%= form_for @room do |f| %>
+  <div class="card card-block">
+
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+
+    <p>Username and First Message</p>
+    <%= f.fields_for :messages, @message do |field| %>
+      <%= field.text_field :username, placeholder: "Username..", required: true %>
+      <%= field.text_field :body, placeholder: "Enter your first message" %>
+    <% end %>
+  </div>
+
+  <%= f.submit nil, class: 'btn btn-secondary' %>
+<% end %>
+
